# bubble-touch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bubble.cpp  bubble.hpp  bubbletouch_application.cpp  bubbletouch_application.hpp  config.cpp  config.hpp  config.yml  file_watcher.cpp  file_watcher.hpp  game.cpp  game.hpp  game_over_window.cpp  game_over_window.hpp  game_widget.cpp  game_widget.hpp  game_window.cpp  game_window.hpp  initial_window.cpp  initial_window.hpp  main.cpp  mark_detection.cpp  mark_detection.hpp  particle.cpp  particle.hpp  player.cpp  player.hpp  player_score_widget.cpp  player_score_widget.hpp  styles.css  videocamera.cpp  videocamera.hpp
